--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,26 +18,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Compile
-        uses: crazy-max/ghaction-xgo@v3
-        with:
-          xgo_version: latest
-          go_version: latest
-          dest: dist
-          prefix: clash2singbox
-          targets: windows/386,windows/amd64,linux/386,linux/amd64,linux/arm,linux/arm64,darwin/arm64,darwin/amd64
-          # Show less information
-          v: false
-          x: false
-          race: false
-          ldflags: -s -w
-          buildmode: default
-          trimpath: true
-
-      - name: Publish GitHub Releases
-        uses: softprops/action-gh-release@v1
-        with:
-          name: "clash2singbox ${{ github.ref_name }}"
-          files: |
-            ./dist/*
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/setup-go@v4
+      - name: Build
+        run: go build -o app
+      - name: Generation
+        run: ./app -url ${{ secrets.R2_ACCESS_SECRET_KEY }} 
