--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,6 +18,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - uses: actions/setup-go@v4
+        with:
+          go-version: '>=1.21.0'
       - name: Build
         run: go build -o app
       - name: Download template with wget
